<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        app:titleTextColor="#fff"
        app:subtitleTextColor="#ccc"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F48FB1"
        android:id="@+id/flAddPanel">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:stretchColumns="*">

            <TableRow>
                <TextView
                    android:text="@string/film_name"
                    android:layout_gravity="end|center"
                    android:textSize="8pt"/>
                <EditText
                    android:id="@+id/film_name_edit_text"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/film_genre"
                    android:layout_gravity="end|center"
                    android:textSize="8pt"/>
                <EditText
                    android:id="@+id/film_genre_edit_text"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/film_year"
                    android:layout_gravity="end|center"
                    android:textSize="8pt"/>
                <EditText
                    android:id="@+id/film_year_edit_text"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

    </FrameLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/films_list_view"/>

</LinearLayout>